public/css/home.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap');

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	background: url("https://media.discordapp.net/attachments/632189134714306581/741356771628679240/Artboard_1.png?width=1204&height=677") center no-repeat;
	background-size: cover;
	width: 100vw;
	height: 100vh;
	display: flex;
	justify-content: center;
	align-items: center;
}

.wrap {
	width: 100%;
	height: 100%;
	background: url("../assets/images/home.png") center no-repeat;
	background-size: cover;
	position: relative;
}

li, a, button {
	font-family: 'Manrope', sans-serif;
	font-weight: 500;
	font-size: 16px;
	color: #b4b7ba;
	text-decoration: none;
}

.avatar {
	display: flex;
	align-items: center;
}

.avatar img {
	clip-path: circle();
	margin-left: 10px;
}

header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 1vh 10%;
}

.logo {
	cursor: pointer;
	height: 50px;
}

.nav_links {
	list-style: none;
}

.nav_links li {
	display: inline-block;
	padding: 0 20px;
}

.nav_links li a {
	transition: all 0.3s ease 0s;
}

.nav_links li a:hover {
	color: rgba(164, 55, 219, 0.7);
}

button {
	padding: 9px 25px;
	background-color: rgba(106, 8, 153, 1);
	border: none;
	border-radius: 30px;
	cursor: pointer;
	transition: all 0.3s ease 0s;
}

button:hover {
	background-color: rgba(106, 8, 153, 0.5);
}

